PickARestaurant/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-7-openjdk-amd64/bin/javadoc
-sourcepath
/home/brent/Java/Restaurant Generator
-source
1.7
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.8.2.jar:/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/usr/share/bluej/userlib/pi4j-device.jar:/usr/share/bluej/userlib/pi4j-core.jar:/usr/share/bluej/userlib/pi4j-service.jar:/home/brent/Java/Restaurant Generator
-d
/home/brent/Java/Restaurant Generator/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/usr/share/bluej/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
-doctitle
Restaurant Generator
-windowtitle
Restaurant Generator
-author
-version
-nodeprecated
-package
-link
http://download.oracle.com/javase/8/docs/api/
/home/brent/Java/Restaurant Generator/RestaurantGenerator.java
<---- end of javadoc command ---->
Loading source file /home/brent/Java/Restaurant Generator/RestaurantGenerator.java...
Constructing Javadoc information...
/home/brent/Java/Restaurant Generator/RestaurantGenerator.java:9: error: package edu.duke does not exist
import edu.duke.*;
^
Standard Doclet version 1.7.0_91
Building tree for all the packages and classes...
Generating /home/brent/Java/Restaurant Generator/doc/RestaurantGenerator.html...
Generating /home/brent/Java/Restaurant Generator/doc/package-frame.html...
Generating /home/brent/Java/Restaurant Generator/doc/package-summary.html...
Generating /home/brent/Java/Restaurant Generator/doc/package-tree.html...
Generating /home/brent/Java/Restaurant Generator/doc/constant-values.html...
Building index for all the packages and classes...
Generating /home/brent/Java/Restaurant Generator/doc/overview-tree.html...
Generating /home/brent/Java/Restaurant Generator/doc/index-all.html...
Building index for all classes...
Generating /home/brent/Java/Restaurant Generator/doc/allclasses-frame.html...
Generating /home/brent/Java/Restaurant Generator/doc/allclasses-noframe.html...
Generating /home/brent/Java/Restaurant Generator/doc/index.html...
Generating /home/brent/Java/Restaurant Generator/doc/help-doc.html...
Generating /home/brent/Java/Restaurant Generator/doc/stylesheet.css...
1 warning
